Change background color

--- a/frontPage.html
+++ b/frontPage.html
@@ -4,20 +4,20 @@
             Aislynn's webDev Page 
         </title>
     
-        <h1 style="background-color:deepskyblue; font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; text-align: center; color:darkgreen; padding: 2%;">
-            Welcome To My WebDev Class Page
+        <h1 style="background-color:deepskyblue; font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; text-align: center; color:darkgreen; padding: 2%; border-style: double; border-width: 10px; text-align:center; display: block; margin-left: auto; margin-right: auto; width: 50%; border-color:palegreen">
+            Welcome To My WebDev Class Page 🥶
         </h1>
     </head>
 
 </html>
 
-<body style="background-color:cadetblue">
+<body style="background-color:aquamarine">
 
-    <p style="margin:10%; font-style: oblique; font-family: cursive; font-size: large;text-align: center; font-size: 30px;border-style: groove; border-width: 5px;">
-       <a href="https://aislynnli.github.io/week01/week1"> Week 01 Reflection on As We May Think </a> 
+    <p style="margin:10%; font-style: oblique; font-family: cursive; font-size: large;text-align: center; font-size: 30px;border-style: groove; border-width: 5px; background-color:lightskyblue">
+       <a href="../AislynnLi.github.io/week01/week1.html"> Week 01 Reflection on As We May Think </a> 
     </p>
 
-    <p style="margin:10%; font-style: oblique; font-family: cursive; font-size: large;text-align: center; font-size: 30px;border-style: groove; border-width: 5px;">
+    <p style="margin:10%; font-style: oblique; font-family: cursive; font-size: large;text-align: center; font-size: 30px;border-style: groove; border-width: 5px;background-color:lightskyblue">
         <a href="https://aislynnli.github.io/week02/week2"> Week 02 Reflection on Ways of Seeing  </a> 
      </p>
     
