--- a/frontPage.html
+++ b/frontPage.html
@@ -14,7 +14,7 @@
 <body style="background-color:aquamarine">
 
     <p style="margin:10%; font-style: oblique; font-family: cursive; font-size: large;text-align: center; font-size: 30px;border-style: groove; border-width: 5px; background-color:lightskyblue">
-       <a href="../AislynnLi.github.io/week01/week1.html"> Week 01 Reflection on As We May Think </a> 
+       <a href="week01/week1.html"> Week 01 Reflection on As We May Think </a> 
     </p>
 
     <p style="margin:10%; font-style: oblique; font-family: cursive; font-size: large;text-align: center; font-size: 30px;border-style: groove; border-width: 5px;background-color:lightskyblue">
