--- a/frontPage.html
+++ b/frontPage.html
@@ -18,7 +18,7 @@
     </p>
 
     <p style="margin:10%; font-style: oblique; font-family: cursive; font-size: large;text-align: center; font-size: 30px;border-style: groove; border-width: 5px;background-color:lightskyblue">
-        <a href="https://aislynnli.github.io/week02/week2"> Week 02 Reflection on Ways of Seeing  </a> 
+        <a href="week02/week2.html"> Week 02 Reflection on Ways of Seeing  </a> 
      </p>
     
 </body>
