--- a/frontPage.html
+++ b/frontPage.html
@@ -3,6 +3,8 @@
         <title>
             Aislynn's webDev Page 
         </title>
+
+        <meta charset="UTF-8">
     
         <h1 style="background-color:deepskyblue; font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; text-align: center; color:darkgreen; padding: 2%; border-style: double; border-width: 10px; text-align:center; display: block; margin-left: auto; margin-right: auto; width: 50%; border-color:palegreen">
             Welcome To My WebDev Class Page 🥶
