--- a/week02/week2.html
+++ b/week02/week2.html
@@ -4,7 +4,7 @@
         Reflection on Ways of Seeing 
     </title>
 
-    <h1 style="background-color:rgb(242, 197, 73); font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; text-align: center; color:rgb(150, 103, 27); border-radius: 10%; padding: 2%; border-style:double; border-width: 5px;">
+    <h1 style="background-color:rgb(242, 197, 73); font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; text-align: center; color:rgb(150, 103, 27); border-radius: 30%; padding: 2%; border-style:double; border-width: 5px; width:50%; display: block; margin-left: auto; margin-right: auto;">
         Reflection on Ways of Seeing
     </h1>
 </head>
@@ -13,7 +13,7 @@
 
 <body style="background-color:rgb(231, 212, 136);">
 
-    <p style="margin:7%; font-style: oblique; font-family: cursive; font-size: large; border-style:dashed; padding: 50px; border-radius: 50px; border-color:brown">
+    <p style="margin:3%; font-style: oblique; font-family: cursive; font-size: large; border-style:dashed; padding: 50px; border-radius: 50px; border-color:brown">
         John Berger's series of Ways of Seeing is both a joy to watch and inspiring. Not only is its content thought-provoking, but the way Berger tells it with the corresponding clips is also very enlightening. For example, in the first episode, he talks about how the environment in which the painting is located affects the viewer's perception of it. The sound around the painting, the image before and after the painting when it is seen on TV, and the images next to the painting when it's on a newspaper, all affect one's experience of the painting. And in this video, by editing to simulate this process, the audience can actually visualize this impact.
 
         <br><br>
@@ -26,13 +26,20 @@
 
     </p>
 
-    <p>
-        <img src="gallery.jpg" alt="" style="text-align:center; display: block; margin-left: auto; margin-right: auto; width: 50%;">
-
-    </p>
-
+    <aside style="width: 13%; padding-left: .5rem; margin-left: .5rem; float: right; box-shadow: inset 5px 0 5px -5px darkred; font-style: italic;
+    color: darkred; display: inline; margin-left:auto; margin-right:10%; margin-top: 15%;">
     <p style="font-size: 10px; text-align: center;">
         (a picture of me at the gallery, in which the focus is neither the painting or me, but the combination of us)
     </p>
+    </aside>
+
+    <p>
+        <img src="gallery.jpg" alt="" style="text-align:center; display: block; margin-left: auto; margin-right: 25%; width: 50%;">
+
+    </p>
+
+    <footer style="display: flex; justify-content: center; padding: 5px; background-color:lightyellow; color: black;">
+        © 2022 Aislynn
+      </footer>
     
 </body>
