--- a/frontPage.html
+++ b/frontPage.html
@@ -5,6 +5,8 @@
         </title>
 
         <meta charset="UTF-8">
+
+        <link rel="stylesheet" href="style.css">
     
         <h1 style="background-color:deepskyblue; font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; text-align: center; color:darkgreen; padding: 2%; border-style: double; border-width: 10px; text-align:center; display: block; margin-left: auto; margin-right: auto; width: 50%; border-color:palegreen">
             Welcome To My WebDev Class Page 🥶
@@ -15,12 +17,25 @@
 
 <body style="background-color:aquamarine">
 
-    <p style="margin:10%; font-style: oblique; font-family: cursive; font-size: large;text-align: center; font-size: 30px;border-style: groove; border-width: 5px; background-color:lightskyblue">
-       <a href="week01/week1.html"> Week 01 Reflection on As We May Think </a> 
+    <p> 
+        <a href="week01/week1.html">
+        Reflection on As We May Think </a> 
     </p>
 
-    <p style="margin:10%; font-style: oblique; font-family: cursive; font-size: large;text-align: center; font-size: 30px;border-style: groove; border-width: 5px;background-color:lightskyblue">
-        <a href="week02/week2.html"> Week 02 Reflection on Ways of Seeing  </a> 
+    <p>
+        <a href="week02/week2.html"> Reflection on Ways of Seeing  </a> 
+     </p>
+
+     <p>
+        <a href="week04/week4.html"> Personal Effects  </a> 
+     </p>
+
+     <p>
+        <a href="week05/week5.html"> America, Seen Through Photographs, Darkly  </a> 
+     </p>
+
+     <p>
+        <a href="week06/animation.html"> CSS Animation  </a> 
      </p>
     
 </body>
