--- a/pair_project/main_page.html
+++ b/pair_project/main_page.html
@@ -54,19 +54,19 @@
             <div id="main_button_display">
             <div>
               <a href="artist_background.html">
-               <button class="main_button">artist background</button>
+               <button class="main_button">Artist Background</button>
               </a >
             </div>
            
             <div>
               <a href="artwork_description.html">
-               <button class="main_button">artwork description</button>
+               <button class="main_button">Artwork Description</button>
                </a >
             </div>
            
             <div>
               <a href="thoughts.html">
-               <button class="main_button">our thought</button>
+               <button class="main_button">Thoughts</button>
               </a >
             </div>
             </div>
