--- a/pair_project/artwork_description.html
+++ b/pair_project/artwork_description.html
@@ -100,11 +100,11 @@
                 <img src="assets/aesthetics_1.png" alt="" id="aesthetics_1"><img src="assets/aesthetics_2.png" alt="" id="aesthetics_2">
                     <br>
                     <br>
-                    <textarea id="input" name="input" rows="3" cols="101">Form Art  transforms the most bureaucratic, functional, and unloved aspects of the web into aesthetic, ludic elements. The work's appearance relies largely on whichever operating system the viewer is using to access it, resulting in a morphing aesthetic that updates itself over time, in tandem with software's constant evolution.
+                    <textarea id="input" name="input" rows="4" cols="101">Form Art transforms the most functional, and unloved aspects of the web into aesthetic, ludic elements. The initial idea of the author was to use them not as they were supposed to be used—as input interfaces—but to focus on their shapes, their position on a page, and to try to animate them. He tried to show the concept of “Misuse of technology".
                     </textarea>
                     <br>
                     <br>
-                    <textarea id="input" name="input" rows="3" cols="101">The initial idea of the author was to use them not as they were supposed to be used—as input interfaces—but to focus on their shapes, their position on a page, and to try to animate them. He tried to show the concept of “Misuse of technology" and "absurdist mega-interfaces".
+                    <textarea id="input" name="input" rows="2" cols="101">The work's appearance relies largely on whichever operating system the viewer is using to access it, resulting in an aesthetic that updates itself over time, in tandem with software's constant evolution.
                     </textarea>
                     <br>
                     <br>
