--- a/pair_project/artist_background.html
+++ b/pair_project/artist_background.html
@@ -57,7 +57,7 @@
     </textarea>
 
     <div id="input_pos3">
-        <a href=" ">
+        <a href="https://artinvestment.ru/en/invest/ideas/20101101__photo.html">
 <button id="page2_button3" class="main_button">&nbsp;</button>
 </a >
         
