--- a/final_project/final.html
+++ b/final_project/final.html
@@ -4,7 +4,8 @@
             Final Project
         </title>
 
-        <meta charset="UTF-8">
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+        <meta http-equiv="content-type" content="text/html; charset=utf-8" />
         <link rel="stylesheet" href="style.css">
         <script src="sketch.js" defer></script>
         <script src="https://cdn.jsdelivr.net/npm/interactjs/dist/interact.min.js"></script>
@@ -69,7 +70,7 @@
       <div class="page" id="page3"> <a href="page3.html">page3</a></div>
       <button id="turn_left">☚</button>
       <button id="turn_right">☛</button>
-      <button > 
+      <button id="instruction" > 
       <a href="#popup1">instructions</a>
       </button>
     </div>
@@ -131,6 +132,13 @@
        </div>
       </div>
   </div>
+
+  <audio id="key">
+    <source src="audio/key.mp3" type="audio/ogg">
+  </audio>
+  <audio id="write">
+    <source src="audio/write.mp3" type="audio/ogg">
+  </audio>
 
 
 
