--- a/final_project/page2.html
+++ b/final_project/page2.html
@@ -5,14 +5,17 @@
         </title>
 
         <meta charset="UTF-8">
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+        <meta http-equiv="content-type" content="text/html; charset=utf-8" />
         <link rel="stylesheet" href="style.css">
         <script src="sketch.js" defer></script>
         <script src="source.js" defer></script>
+        <script src="html2canvas.js" defer></script>
         <script src="https://cdn.jsdelivr.net/npm/interactjs/dist/interact.min.js"></script>
         <!-- or -->
         <script src="https://unpkg.com/interactjs/dist/interact.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.4.1/html2canvas.min.js"></script>
+        <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.0/html2canvas.js"></script> -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/1.3.3/FileSaver.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
         <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
@@ -71,7 +74,7 @@
         <div class="page" id="page2"> <a href="page2.html">page2</a> </div>
         <div class="page" id="page3"> <a href="page3.html">page3</a> </div>
         <button id="screenshot"> save </button>
-        <button > 
+        <button id="instruction"> 
             <a href="#popup1">instructions</a>
             </button>
       </div>
@@ -98,6 +101,16 @@
          </div>
         </div>
     </div>
+
+    <audio id="key">
+        <source src="audio/key.mp3" type="audio/ogg">
+      </audio>
+      <audio id="write">
+        <source src="audio/write.mp3" type="audio/ogg">
+      </audio>
+      <audio id="change">
+        <source src="audio/shua.mp3" type="audio/ogg">
+      </audio>
   
 
     <script>page_on = 2</script>
