--- a/final_project/final.html
+++ b/final_project/final.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>
-            Final Project
+            Chinese Keyboard
         </title>
 
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
