--- a/final_project/page3.html
+++ b/final_project/page3.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>
-            Final Project
+          Chinese Keyboard
         </title>
 
         <meta charset="UTF-8">
