--- a/frontPage.html
+++ b/frontPage.html
@@ -11,31 +11,92 @@
         <h1 style="background-color:deepskyblue; font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; text-align: center; color:darkgreen; padding: 2%; border-style: double; border-width: 10px; text-align:center; display: block; margin-left: auto; margin-right: auto; width: 50%; border-color:palegreen">
             Welcome To My WebDev Class Page 🥶
         </h1>
+
+        <script src="liu.js" defer></script>
     </head>
 
 </html>
 
 <body style="background-color:aquamarine">
 
-    <p> 
+    <div id="container">
+
+    <input type="checkbox" id="week1_check"  onclick="myFunction1()">
+    <input type="checkbox" id="week2_check"  onclick="myFunction2()">
+    <input type="checkbox" id="week3_check"  onclick="myFunction3()">
+    <input type="checkbox" id="week4_check"  onclick="myFunction4()">
+    <input type="checkbox" id="week5_check"  onclick="myFunction5()">
+
+    <input type="checkbox" id="week6_check"  onclick="myFunction6()">
+    <input type="checkbox" id="week7_check"  onclick="myFunction7()">
+    <input type="checkbox" id="week8_check"  onclick="myFunction8()">
+    <input type="checkbox" id="week9_check"  onclick="myFunction9()">
+    <input type="checkbox" id="week10_check"  onclick="myFunction10()">
+    <input type="checkbox" id="week11_check"  onclick="myFunction11()">
+    <input type="checkbox" id="E1_check"  onclick="myFunctionE()">
+    <input type="checkbox" id="E2_check"  onclick="myFunctionE()">
+    <input type="checkbox" id="E3_check"  onclick="myFunctionE()">
+    <input type="checkbox" id="E4_check"  onclick="myFunctionE()">
+
+    <input type="checkbox" id="week12_check"  onclick="myFunction12()">
+    <input type="checkbox" id="W1_check"  onclick="myFunctionW()">
+    <input type="checkbox" id="W2_check"  onclick="myFunctionW()">
+    <input type="checkbox" id="W3_check"  onclick="myFunctionW()">
+    <input type="checkbox" id="W4_check"  onclick="myFunctionW()">
+    <input type="checkbox" id="W5_check"  onclick="myFunctionW()">
+    <input type="checkbox" id="W6_check"  onclick="myFunctionW()">
+    <input type="checkbox" id="W7_check"  onclick="myFunctionW()">
+
+    </div>
+
+
+    <p id="week1"> 
         <a href="week01/week1.html">
         Reflection on As We May Think </a> 
     </p>
 
-    <p>
+    <p id="week2">
         <a href="week02/week2.html"> Reflection on Ways of Seeing  </a> 
      </p>
 
-     <p>
+     <p id="week3">
         <a href="week04/week4.html"> Personal Effects  </a> 
      </p>
 
-     <p>
+     <p id="week4">
         <a href="week05/week5.html"> America, Seen Through Photographs, Darkly  </a> 
      </p>
 
-     <p>
+     <p id="week5">
         <a href="week06/animation.html"> CSS Animation  </a> 
+     </p>
+
+     <p id="week6">
+        <a href="https://aislynnli.github.io/pair_project/main_page.html"> Form Art  </a> 
+     </p>
+
+     <p id="week7">
+        <a href="https://aislynnli.github.io/week09/week9.html"> p5 Sketch  </a> 
+     </p>
+
+     <p id="week8">
+        <a href="https://helloteeyah.github.io/week10/index.html"> Buttons  </a> 
+     </p>
+
+     <p id="week9">
+        <a href="https://aislynnli.github.io/week11/week11.html"> The Medium is the Message  </a> 
+     </p>
+
+     <p id="week10">
+        <a href="https://aislynnli.github.io/proposal/proposal.html"> Final Proposal  </a> 
+     </p>
+
+     <p id="week11">
+        <a href="https://aislynnli.github.io/final_project/final.html"> Chinese Keyboard  </a> 
+     </p>
+
+     <p id="week12">
+        <a href="https://aislynnli.github.io/final_project/documentation.html"> Final Documentation  </a> 
      </p>
     
 </body>
