--- a/frontPage.html
+++ b/frontPage.html
@@ -13,6 +13,8 @@
         </h1>
 
         <script src="liu.js" defer></script>
+        <link href="https://fonts.googleapis.com/css2?family=Ewert&display=swap" rel="stylesheet">
+
     </head>
 
 </html>
